Leveraging autoprefixer so removing some vendor prefixed

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -105,6 +105,18 @@
 }
 
 /*
+* Base Button Tyography
+*
+*/
+.button-uppercase {
+  text-transform: uppercase;
+}
+
+.button-capitalize {
+  text-transform: capitalize;
+}
+
+/*
 * Base Colors
 *
 * Create colors for buttons
